--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,7 @@ on:
   push:
     branches:
       - main
-  schedule:
-    - cron: "0 0 */3 * *"
+  pull_request:
   workflow_dispatch:
 
 concurrency:
@@ -28,29 +27,10 @@ jobs:
         with:
           python-version: 3.12
           cache: pip
-      - name: Install dependencies
-        run: |
-          pip install -e .
+      - uses: prefix-dev/setup-pixi@v0.8.0
+        with:
+          pixi-version: v0.27.1
+          cache: true
       - name: Run
         run: |
-          make run
-      - name: Install Quarto
-        uses: quarto-dev/quarto-actions/setup@v2
-        with:
-          version: pre-release
-      - name: Render
-        run: |
-          make render
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - name: Publish to Cloudflare Pages
-        uses: cloudflare/pages-action@v1
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: fbe814d4a37d3d3d7fcfeec0ab929ff6
-          projectName: datadex
-          directory: portal/.quarto/output
-          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
-          branch: main
+          pixi run run
