--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ length-sort = true
 
 [tool.pixi.project]
 channels = ["conda-forge"]
-platforms = ["linux-64"]
+platforms = ["win-64", "linux-64"]
 
 [tool.pixi.pypi-dependencies]
 lung-sarg = { path = ".", editable = true }
