--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ default = { solve-group = "default" }
 dev = { features = ["dev"], solve-group = "default" }
 
 [tool.pixi.tasks]
-run = "dagster asset materialize --select '*' -m lung_sarg"
+stage-samples = { cmd = "dagster job execute -j stage_idc_nsclc_radiogenomic_samples -m lung_sarg", description = "Stage IDC NSCLC Radiogenomic Samples" }
 clean = { cmd = "rm -rf data/*.parquet data/*.duckdb dbt/target dbt/dbt_packages dbt/logs", description = "Clean the project artifacts" }
 
 [tool.pixi.feature.dev.tasks]
