--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ length-sort = true
 
 [tool.pixi.project]
 channels = ["conda-forge"]
-platforms = ["win-64", "linux-64"]
+platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
 
 [tool.pixi.pypi-dependencies]
 lung-sarg = { path = ".", editable = true }
@@ -69,5 +69,14 @@ clean = { cmd = "rm -rf data/*.parquet data/*.duckdb dbt/target dbt/dbt_packages
 [tool.pixi.feature.dev.tasks]
 dev = { cmd = "dagster dev", description = "Run the development environment" }
 
-[tool.pixi.dependencies]
+[tool.pixi.target.win-64.dependencies]
 s5cmd = ">=2.2.2,<3"
+
+[tool.pixi.target.linux-64.dependencies]
+s5cmd = ">=2.2.2,<3"
+
+[tool.pixi.target.osx-64.dependencies]
+s5cmd = ">=2.2.2,<3"
+
+[tool.pixi.target.osx-arm64.dependencies]
+s3cmd = ">=2.0.2,<3"
