--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,8 @@ jobs:
         uses: actions/checkout@v4
       - uses: prefix-dev/setup-pixi@v0.8.1
         with:
-          cache: true
+          cache: false
+          cache-write: false
       - name: Test staging of sample data
         run: |
           pixi run stage-samples
